--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: ZCC Blog
+title: Zcc Blog
 SEOTitle: 诚的博客 | Zcc Blog
 header-img: img/post-bg-desk.jpg
 email: czheng.aq@gmail.com
