--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Zcc Blog
 SEOTitle: 诚的博客 | Zcc Blog
 header-img: img/post-bg-desk.jpg
 email: czheng.aq@gmail.com
-description: "Every failure is leading towards success."
+description: "There is no substitute for understanding what is actually going on."
 keyword: "Zcc, Zcc Blog, 诚的博客, Notes, Economic, Financial"
 url: "http://chengzheng17.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
