--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 
 
 # SNS settings
-RSS: false
-# weibo_username:     qiubaiying
+RSS: true
+weibo_username:     梦想飞行家阿Q
 # zhihu_username:     qiubaiying
 # github_username:    qiubaiying
 # facebook_username:  baiying.qiu.7
