--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Zcc Blog
 SEOTitle: 诚的博客 | Zcc Blog
-header-img: img/home-bg.jpg
+header-img: img/post_black.jpeg
 email: czheng.aq@gmail.com
 description: "There is no substitute for understanding what is actually going on."
 keyword: "Zcc, Zcc Blog, 诚的博客, Notes, Economic, Financial"
